<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/topTitleSize"
                android:textStyle="bold"
                app:fontFamily="@font/comfortaa_bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/theme_toggle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="4dp"
                android:padding="9dp"
                app:tint="@color/tintColor"
                tools:srcCompat="@drawable/ic_dark_theme_24dp" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/pager_card"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@id/address_card"
                app:layout_constraintDimensionRatio="w,2:1.1"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toTopOf="@id/top">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/dot1"
                        android:layout_width="@dimen/dotSize"
                        android:layout_height="@dimen/dotSize"
                        android:background="@drawable/selected_dot"
                        app:layout_constraintBottom_toBottomOf="@+id/dot2"
                        app:layout_constraintEnd_toStartOf="@id/dot2"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/dot2" />

                    <View
                        android:id="@+id/dot2"
                        android:layout_width="@dimen/dotSize"
                        android:layout_height="@dimen/dotSize"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/unselected_dot"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/dot3"
                        app:layout_constraintStart_toEndOf="@id/dot1" />

                    <View
                        android:id="@+id/dot3"
                        android:layout_width="@dimen/dotSize"
                        android:layout_height="@dimen/dotSize"
                        android:background="@drawable/unselected_dot"
                        app:layout_constraintBottom_toBottomOf="@id/dot2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/dot2"
                        app:layout_constraintTop_toTopOf="@+id/dot2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/address_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPadding="8dp"
                app:layout_constraintBottom_toTopOf="@id/rating_card"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/pager_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_condensed_bold"
                        android:text="@string/address"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/titleSize"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_location_24dp"
                        app:drawableTint="@color/tintColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="@string/hotel_address"
                        android:textColor="@color/detailColor"
                        android:textSize="@dimen/detailSize" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/rating_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPadding="8dp"
                app:layout_constraintBottom_toTopOf="@id/detail_card"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/address_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_condensed_bold"
                        android:text="@string/tripadviosr_rating"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/titleSize"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_star_24dp"
                        app:drawableTint="@color/tintColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="@string/hotel_tripadvior_rating"
                        android:textColor="@color/detailColor"
                        android:textSize="@dimen/detailSize" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/detail_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPadding="8dp"
                app:layout_constraintBottom_toTopOf="@id/features_card"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/rating_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_condensed_bold"
                        android:text="@string/details"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/titleSize"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_details_24dp"
                        app:drawableTint="@color/tintColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="@string/hotel_details"
                        android:textColor="@color/detailColor"
                        android:textSize="@dimen/detailSize" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/features_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPadding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/bottom"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/detail_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_condensed_bold"
                        android:text="@string/features"
                        android:textColor="@color/titleColor"
                        android:textSize="@dimen/titleSize"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_check_24dp"
                        app:drawableTint="@color/tintColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="@string/hotel_features"
                        android:textColor="@color/detailColor"
                        android:textSize="@dimen/detailSize" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>